--- a/tasks/install.yaml
+++ b/tasks/install.yaml
@@ -1,6 +1,5 @@
 - name: Install NFS packages
   become: yes
-  ansible.builtin.dnf:
-    name: nfs-utils
-    state: latest
-    update_cache: true
+  apt:
+    name: nfs-server, nfs-client
+    state: present
